--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^11.3.24",
+    "locomotive-scroll": "^4.1.4",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
+    "remixicon": "^4.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
